phase2/test_extra/test_4.out
Error type 5 at Line 21: unmatching type on both sides of assignment
Error type 5 at Line 22: unmatching type on both sides of assignment
Error type 6 at Line 25: rvalue appears on the left-side of assignment
Error type 10 at line 26: indexing on non-array variable
